--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "node-sass": "^7.0.1",
     "sass": "^1.54.4",
     "sass-loader": "^13.0.2",
     "webpack": "^5.74.0",
